# lichess-bot-redux

./: .gitignore  CMakeLists.txt  check_blend.py  ctx  make.ps1  package-lock.json
.github/: copilot-instructions.md
.github/prompts/: analyst.prompt.md  trace-analyst.agent.md  trace-analyst.prompt.md  trace-reader.agent.md
archives/training-legacy/: __init__.py  __main__.py  _make_test_pgn.py  analyze_labels.py  data_loader.py  download_lichess.py  export_weights.py  generate_data.py  label_data.py  model.py  pipeline.py  requirements.txt  train_nnue.py
bot/: .env.example  index.js  package-lock.json  package.json  start-hce.bat  start.bat  test_bot_node.js  version.json
bot/data/: positions.json
bot/engine/: .gitignore
bot/public/: index.html
bot/public/css/: dashboard.css
bot/public/js/: app.js  board.js  chart.js  san.js  sound.js  tab-analytics.js  tab-comms.js  tab-controls.js  tab-engine-pane.js  tab-engine-pane.js.bak  tab-engine.js  tab-game.js  tab-history.js  tab-seek.js  tab-seek.js.bak
bot/src/: analysisSf.js  book.js  botDb.js  challenger.js  config.js  dashState.js  dashboard.js  engine.js  fen.js  game.js  gameDb.js  lichess.js  logBus.js  personality.js  policies.js  positionStore.js  ppmReporter.js  store.js
bot/src/services/: ChessComAdapter.js  LichessAdapter.js  SelfPlayAdapter.js  ServiceAdapter.js  index.js
data/: pipeline_state.json
data/benchmarks/designs/: README.md  example_manifest.json  experimental_sweep_smoke.json  random_sweep_10.json
data/benchmarks/search/: README.md  isolate_badmoves.txt  nps_core.txt  nps_stress.txt  phase0_onepos.txt
engine/: benchmark.cpp  benchmark.h  bitboard.cpp  bitboard.h  board.cpp  board.h  eval.cpp  eval.h  eval_params.cpp  eval_params.h  main.cpp  move.h  movegen.cpp  movegen.h  pawn_hash.cpp  pawn_hash.h  search.cpp  search.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h
engine/nnue/: nnue_accumulator.h  nnue_arch.h  nnue_arch_v2.h  nnue_eval.cpp  nnue_eval.h  nnue_network.cpp  nnue_network.h  nnue_simd.cpp  nnue_updater.cpp  nnue_updater.h
engine/syzygy/: syzygy.cpp  syzygy.h
ml/: __init__.py  arch.py  data.py  dataset.py  experimental_model.py  export.py  features.py  loss.py  model.py  test_nnue.py  trainer.py
tools/: engine_config.py  pipeline.py  prep_data.py  query_selfplay.py  sprt.py  train.py  train_watch.py  tune_search.py
tools/analysis/: analyze_compensation.js  analyze_compensation2.js  analyze_fighting.js  analyze_positional.js  analyze_qloss.js  analyze_recent.ps1  analyze_time_usage.py  analyze_trajectory.js  backfill_moves_from_pgn.js  compare_engines.py  compare_nnue_hce.py  eval_accuracy.py  eval_attribution.js  eval_fen.py  eval_positions.py  game_compare.py  game_diagnose.py  game_ingest.py  game_report.py  inspect_trace.js  pawnocity.js  probe.py  replay_analysis.py  structural_audit.py  tree_compare.py  watch_play.py
tools/bench/: benchmark_fit_variants.py  compare_design_benchmarks.py  diagnose_trainer_scaling.py  fit_binary_subset.py  nps_hw_sweep.py  overfit_10_positions.py  run_design_sweep.py  search_bench.py  verify_mt_regression.py
tools/data/: bucket_rebalance.py  build_fixed_val.py  check_data.py  dedup_bin_dataset.py  gen_endgame_positions.py  inspect_bin_position.py  reshuffle_bin.py  result_consistency_filter.py  stratified_val_split.py  validate_bin.py
tools/selfplay/: gen_data.py  self_play.py  selfplay_match.py
tools/tests/engine/: test_crash.py  test_emergency.py  test_go_infinite.py  test_hce_output.py  test_mt_deadlock.py  (+2 more)
tools/tune/: _see_probe.py  genetic_tune.py  pst_tuner.js  sf_guided_tune.py  sprt_tune.py  structural_audit.py  texel_tune.py
tools/uci/: __init__.py  board.py  engine.py  epd.py  game.py  match.py  player.py
(+3 files in other folders)
